--- a/app/assets/stylesheets/pages/_dashboard_index.scss
+++ b/app/assets/stylesheets/pages/_dashboard_index.scss
@@ -1,11 +1,14 @@
 .accept {
   color: $green;
+  font-size: 3.5vh;
 }
 
 .reject {
   color: $red;
+  font-size: 3.5vh;
 }
 
 .add {
-  color: $blue;
+  color: $green;
+  font-size: 3.5vh;
 }
