--- a/app/assets/stylesheets/components/_card_dashboard.scss
+++ b/app/assets/stylesheets/components/_card_dashboard.scss
@@ -29,7 +29,7 @@
 }
 
 .card-dashboard .card-dashboard-infos {
-  padding: 16px;
+  padding: 10px;
   height: 111px;
   width: 80%;
 }
@@ -52,3 +52,23 @@ a {
   bottom: 10px;
   right: 10px;
 }
+
+
+
+.card-left p {
+  margin-top: 0px;
+  font-size: 16px;
+}
+
+.nav-link {
+  padding: 10px;
+}
+
+.link-new {
+  font-size: 16px;
+  font-weight: bold;
+  color: $green;
+  padding-top: 10px;
+}
+
+
