--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -39,11 +39,16 @@
   color: $green;
   top: 10px;
   right: 10px;
+  font-size: 3vh;
 }
 
 
 .edit {
   color: $green;
+  position: absolute;
+  right: 10px;
+  bottom: 20px;
+  font-size: 3vh;
 }
 
 .nav-link {
