--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -5,13 +5,13 @@
   <% end %>
   <ul class="nav nav-tabs mt-5">
     <li class="nav-item">
-      <a class="nav-link active" href="#1a" data-toggle="tab">My bookings</a>
+      <a class="nav-link active" style="font-size: 15px;" href="#1a" data-toggle="tab">My bookings</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#2a" data-toggle="tab">My booking requests</a>
+      <a class="nav-link" style="font-size: 15px;" href="#2a" data-toggle="tab">My booking requests</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#3a" data-toggle="tab">My offices</a>
+      <a class="nav-link" style="font-size: 15px;" href="#3a" data-toggle="tab">My offices</a>
     </li>
   </ul>
   <div class="tab-content clearfix">
@@ -26,17 +26,21 @@
         <div class="card-dashboard-infos">
           <div class="d-flex justify-content-between align-items-center">
             <div class="card-left">
-              <p>Booking id: <%= booking.id %></p>
-              <p>Office: <%= booking.office.name %></p>
-              <p>Location: <%= booking.office.address %></p>
+              <p><strong>Office: </strong> <%= booking.office.name.split.first(3).join(' ') %>..</p>
+              <p><strong>Location: </strong><%= booking.office.address.split.last(2).join(' ') %></p>
+              <% if booking.start_date == booking.end_date %>
+              <p><strong>Booking dates: </strong> <%= booking.start_date %> </p>
+              <% else %>
+              <p><strong>Booking dates: </strong> <%= booking.start_date %> to <%= booking.end_date %></p>
+              <% end %>
             </div>
             <div class="card-right">
-              <%= link_to booking_path(booking), method: :delete, data: { confirm: "Are you sure you wish to delete? (if less than 48h before your stay, you will not be refunded...)" } do %>
+              <%= link_to booking_path(booking), method: :delete, data: { confirm: "Are you sure you want to delete? (if less than 48h before your stay, you will not be refunded...)" } do %>
               <i class="fas fa-trash-alt delete"></i>
               <% end %>
-              <% if booking.status == "closed" && booking.reviews == [] %>
+              <% if booking.status == "Closed" && booking.reviews == [] %>
               <%= link_to '<p>Add review</p>'.html_safe, new_booking_review_path(booking), style: 'color: #11BF98; font-weight: bold' %>
-              <% elsif booking.status == "closed" && booking.reviews != [] %>
+              <% elsif booking.status == "Closed" && booking.reviews != [] %>
               <% booking.reviews.each do |review| %>
               <div class="d-flex">
                 <div>
@@ -53,35 +57,32 @@
       <% end %>
       <% end %>
       <%= link_to offices_path do %>
-        <i class="fas fa-plus-circle add"></i>
+      <p class="link-new">Pick another office</p>
       <% end %>
     </div>
 
     <div class="tab-pane" id="2a">
       <% if @bookings_received == [] %>
-      <p>No booking request received so far...</p>
+        <p>No booking request received so far...</p>
       <% else %>
-      <% @bookings_received.each do |booking| %>
-      <div class="card-dashboard">
-        <%= cl_image_tag booking.office.photo %>
-        <div class="card-dashboard-infos">
-          <div class="d-flex">
-            <div class="card-left">
-              <h2>Booking id: <%= booking.id %></h2>
-              <h2>Office: <%= booking.office.name %></h2>
-              <h2>Location: <%= booking.office.address %></h2>
-            </div>
-            <div class="card-right">
+        <% @bookings_received.each do |booking| %>
+        <div class="card-dashboard">
+          <%= cl_image_tag booking.office.photo %>
+          <div class="card-dashboard-infos pb-0">
+              <div class="card-left">
+                <p><strong>Office: </strong><%= booking.office.name.split.first(2).join(' ') %>..</p>
+                <p><strong>Location: </strong><%= booking.office.address.split.last(2).join(' ') %></p>
+                <p><strong>Booking status: </strong><%= booking.status %>  </p>
+              </div>
               <% if booking.status == "Pending"  %>
-                <%= link_to "<i class='fas fa-check-circle accept'></i>".html_safe, accept_booking_path(booking) %>
-                <%= link_to "<i class='fas fa-times-circle reject'></i>".html_safe, reject_booking_path(booking), class: "reject-icon" %>
-              <% end %>
-              <h3>Booking status: <%= booking.status %>  </h3>
-            </div>
+                <div class="d-flex justify-content-end align-self-end pt-2">
+                  <div><%= link_to "<i style='padding-right: 8px;'class='fas fa-check-circle accept'></i>".html_safe, accept_booking_path(booking) %></div>
+                  <div><%= link_to "<i class='fas fa-times-circle reject'></i>".html_safe, reject_booking_path(booking), class: "reject-icon" %></div>
+                </div>
+                <% end %>
           </div>
         </div>
-      </div>
-      <% end %>
+        <% end %>
       <% end %>
     </div>
 
@@ -94,28 +95,25 @@
       <div class="card-dashboard">
         <%= cl_image_tag office.photo %>
         <div class="card-dashboard-infos">
-          <div class="d-flex">
             <div class="card-left">
-              <h2>Office id: <%= office.id %></h2>
-              <h2>Office name: <%= office.name %></h2>
-              <h2>Location: <%= office.address %></h2>
+              <p><strong>Office: </strong><%= office.name.split.first(2).join(' ') %>..</p>
+              <p><strong>Location: </strong><%= office.address.split.last(2).join(' ') %></p>
             </div>
-            <div class="card-right">
+            <div class="card-right d-flex justify-content-end align-self-end">
               <%= link_to edit_office_path(office) do %>
-                <i class="fas fa-pencil-alt edit"></i>
+              <i class="fas fa-pencil-alt edit"></i>
               <% end %>
               <%= link_to office_path(office), method: :delete, data: { confirm: "Are you sure you wish to delete?" } do %>
-                <i class="fas fa-trash-alt delete"></i>
+              <i class="fas fa-trash-alt delete"></i>
               <% end %>
             </div>
-          </div>
         </div>
       </div>
       <% end %>
       <% end %>
       <% end %>
       <%= link_to new_office_path do %>
-        <i class="fas fa-plus-circle add"></i>
+      <i class="fas fa-plus-circle add"></i>
       <% end %>
     </div>
   </div>
