--- a/app/views/offices/show.html.erb
+++ b/app/views/offices/show.html.erb
@@ -137,4 +137,5 @@
       <%= render "bookings/new", office: @office, booking: @booking%>
     </div>
   <% end %>
+  <!-- <div class="unavailable-dates" data-unavailable= "<%#=  %>" ></div> -->
 </div>
