Design new office

--- a/app/views/offices/_form.html.erb
+++ b/app/views/offices/_form.html.erb
@@ -63,7 +63,7 @@
     <div class="col-4 mb-3 form-group">
       <input hidden=true type="checkbox" value=true name="office[heater_ac]" id="heater_ac">
 
-      <label class="equipment-choice" for="heater_ac"><i class="fas fa-thermometer"></i><br>
+      <label class="equipment-choice" for="heater_ac"><i class="fas fa-thermometer-empty"></i><br>
         <p>Heater & A/C</p>
       </label><br>
     </div>
