--- a/app/views/offices/new.html.erb
+++ b/app/views/offices/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container pl-0 pr-0">
   <div class="new-form-content">
-    <h2 class="font-weight-bold" align="left">Create an office</h2>
+    <h2 class="font-weight-bold" align="left">Host your office</h2>
     <%= render 'form' %>
     </div>
   </div>
