Working on current location and updated tabs on index

--- a/app/views/offices/index.html.erb
+++ b/app/views/offices/index.html.erb
@@ -6,7 +6,7 @@
 
   <ul class="nav nav-tabs justify-content-end">
     <li class="nav-item">
-      <a class="nav-link active" href="#offices" data-toggle="tab">Offices List</a>
+      <a class="nav-link active" href="#offices" data-toggle="tab">Offices</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#map" data-toggle="tab">Map</a>
