--- a/app/views/offices/index.html.erb
+++ b/app/views/offices/index.html.erb
@@ -21,7 +21,7 @@
     </div>
     <div class="tab-pane" id="map"
           style="width: 100%;
-          height: 600px;"
+          height: 80vh;"
           data-markers="<%= @markers.to_json %>"
           data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
     </div>
