--- a/app/assets/stylesheets/components/_flatpickr.scss
+++ b/app/assets/stylesheets/components/_flatpickr.scss
@@ -1,4 +1,4 @@
-span.flatpickr-day.today.selected.startRange {
+span.flatpickr-day.today.selected.startRange, span.flatpickr-day.selected.startRange {
   background-color: $green;
 }
 
