--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -90,12 +90,25 @@ img.show-avatar {
 .show-flatpickr h3 {
   font-size: 18px;
   font-weight: bold;
-
 }
+
 
 .show-stars {
   color: $green;
 }
+
+.link-show a {
+  color: $green;
+}
+
+.container-bottom {
+  width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 
 
 
