--- a/app/views/bookings/_new.html.erb
+++ b/app/views/bookings/_new.html.erb
@@ -2,6 +2,6 @@
   <%= b.input :start_date, label: "Dates", as: :string,  input_html: {id: "start_date"} %>
   <%= b.input :end_date, as: :hidden, input_html: {id: "end_date"} %>
   <%= b.input :number_of_people %>
-  <div align="center"><%= b.submit "Reserve", class:"btn-ghost" %>
+  <div align="center" style="padding-top: 8px;"><%= b.submit "Reserve", class:"btn-ghost" %>
   </div>
 <% end %>
