--- a/app/views/offices/show.html.erb
+++ b/app/views/offices/show.html.erb
@@ -1,5 +1,7 @@
 <div class="container">
 <div class="show-page">
+  <div class="link-show" align="left"><%= link_to "< Back to offices", offices_path %>
+  </div>
   <div class="show">
     <%= cl_image_tag @office.photo %>
     <%= image_tag @office.user.avatar, class: "show-avatar" %>
@@ -120,8 +122,7 @@
     </div>
     <% end %>
   </div>
-</div>
-<br>
+  <br>
 <div
   id="map"
   style="width: 100%;
@@ -133,8 +134,11 @@
 
   <br>
   <% if current_user != @office.user %>
+  <div class="container-bottom">
     <div class="show-flatpickr">
       <%= render "bookings/new", office: @office, booking: @booking%>
     </div>
+  </div>
   <% end %>
+</div>
 </div>
