Fixed address displayed for only zip & city

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -34,7 +34,7 @@
       <li class="list-group-item d-flex justify-content-between align-items-center"><div><i class="fas fa-hashtag"></i><u> Booking id:</u></div> <p> <%= @booking.id %></p></li>
       <li class="list-group-item d-flex justify-content-between align-items-center"><div><i class="fas fa-user "></i><u>Guest:</u></div><p> <%= @booking.user.email %></p></li>
       <li class="list-group-item d-flex justify-content-between align-items-center"><div><i class="fas fa-map-marker-alt"></i><u>Location: </u></div><p style=" text-align: right;
-    width: 50%;"><%= @booking.office.address %> </p></li>
+    width: 50%;"><%= @booking.office.address.split.last(2).join(' ') %> </p></li>
       <li class="list-group-item d-flex justify-content-between align-items-center"><div><i class="fas fa-users"></i><u>No. of guests:</u></div><p> <%= @booking.number_of_people %></p></li>
       <li class="list-group-item d-flex justify-content-between align-items-center"><div><i class="fas fa-hashtag"></i><u>Booking status: </u></div><p> <%= @booking.status %></p></li>
       <li class="list-group-item d-flex justify-content-between align-items-center"><div><i class="fas fa-hashtag"></i><u>Payment status:</u> </div><p> <%= @booking.payment_status %></p></li>
