--- a/app/assets/stylesheets/pages/_dashboard_index.scss
+++ b/app/assets/stylesheets/pages/_dashboard_index.scss
@@ -12,3 +12,8 @@
   color: $green;
   font-size: 3.5vh;
 }
+
+.nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
+    background-color: rgba(17, 191, 152, 0.08);
+    border-radius: 5px;
+}
