--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -62,11 +62,14 @@
 
 .banner-text h1 {
   font-size: 5vh;
-  line-height: 7vh;
+  line-height: 6vh;
+  margin-top: 10vh;
+
 }
 
 .banner-text h3 {
   font-size: 3vh;
   line-height: 5vh;
   font-weight: lighter;
+
 }
