--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,10 +9,10 @@
 </div>
 <div class="container">
 
-  <h3 class="my-4 font-weight-bold">Popular cities for coworking</h3>
+  <h3 class="my-4 font-weight-bold">Popular cities for coworking </h3>
 
   <%= link_to offices_path(queryLocation: "Barcelona") do %>
-    <div data-aos="zoom-in" class="card-city barcelona" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dlo5xbrsn/image/upload/v1576596631/barcelona_vwri9g.jpg)">
+    <div class="card-city barcelona" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dlo5xbrsn/image/upload/v1576596631/barcelona_vwri9g.jpg)">
       Barcelona
     </div>
   <% end %>
