--- a/app/assets/stylesheets/components/_card_dashboard.scss
+++ b/app/assets/stylesheets/components/_card_dashboard.scss
@@ -2,7 +2,7 @@
   overflow: hidden;
   height: 120px;
   background: white;
-  box-shadow: 0 0 10px rgba(17, 191, 152, 0.2);;
+  box-shadow: 0 0 10px rgba(189, 195, 199, 1);
   display: flex;
   align-items: center;
   margin-bottom: 12px;
