--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -35,7 +35,7 @@
         <div class="col-4">
           <%= select_tag :queryPrice,
               options_for_select([["Price - Low to High", 1], ["Price - High to Low", 2]]),
-              { class: "form-control search-filter", prompt: "Price"} %>
+              { class: "form-control search-filter", prompt: "Sort by price"} %>
 
         </div>
          <div class="col-4">
