Updated seed and fixed host avatar and favicon

--- a/app/views/offices/_office.html.erb
+++ b/app/views/offices/_office.html.erb
@@ -16,7 +16,11 @@
         </div>
         <strong><p class="card-trip-pricing"><%= humanized_money_with_symbol office.price %>/day</p></strong>
         <% if office.user.avatar %>
-        <%= image_tag office.user.avatar, class: "card-trip-user avatar-bordered" %>
+          <% if office.user == current_user %>
+            <%= image_tag office.user.avatar, class: "card-trip-user avatar-bordered-user" %>
+          <% else %>
+            <%= image_tag office.user.avatar, class: "card-trip-user avatar-bordered" %>
+          <% end %>
         <% end %>
       </div>
     </div>
