--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -40,7 +40,7 @@
         <div class="col-4">
           <%= select_tag :queryPrice,
               options_for_select([["Low to High", 1], ["High to Low", 2]]),
-              { class: "form-control search-filter", prompt: "Sort by price"} %>
+              { class: "form-control search-filter", prompt: "Price"} %>
 
         </div>
          <div class="col-4">
