--- a/app/assets/stylesheets/components/_card_dashboard.scss
+++ b/app/assets/stylesheets/components/_card_dashboard.scss
@@ -11,7 +11,7 @@
 }
 
 .card-dashboard img {
-  height: 100%;
+  // height: 100%;
   width: 120px;
   object-fit: cover;
 }
@@ -70,5 +70,4 @@ a {
   color: $green;
   padding-top: 10px;
 }
-
 
